@@ -8,6 +8,7 @@ Ahmed El-Mahmoudy
 Alex Chadwick
 Chris Randall
 Eric Rippey
+Garrett Smith
 Gianfranco Costamagna
 Howard Su
 Iztok Jeras
