@@ -20,6 +20,8 @@ The contributors that suggested a given feature are shown in []. Thanks!
 
 ****  Add error on redefining preprocessor directives. [Piotr Binkowski]
 
+****  Support $value$plusargs float and shorts, bug1592, bug1619. [Garrett Smith]
+
 ****  Fix color assertion on empty if, bug1604. [Andrew Holme]
 
 ****  Fix for loop missing initializer, bug1605. [Andrew Holme]
